8148854: Class names "SomeClass" and "LSomeClass;" treated by JVM as an equivalent

Added default format checking of class names loaded by the app class loader

Reviewed-by: coleenp, lfoltan